--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -34,3 +34,22 @@
 .active:hover {
   color: #754ffe !important;
 }
+
+.avatar {
+  display: inline-block;
+  height: 3rem;
+  position: relative;
+  width: 3rem;
+}
+
+.avatar-md {
+  height: 2rem;
+  width: 2rem;
+}
+
+.avatar img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  border: 2px solid #acadff;
+}
