Extend the Redux store with user workouts

--- a/src/pages/Exercises.css
+++ b/src/pages/Exercises.css
@@ -2,7 +2,7 @@
   margin-bottom: 15px;
 }
 
-.page-header {
+.page-header-exercises {
   height: 200px;
   background-color: #acadff;
   background-image: url("../static/sports-18.jpg");
