--- a/src/pages/Workouts.css
+++ b/src/pages/Workouts.css
@@ -5,3 +5,33 @@
   background-position-y: 30%;
   background-repeat: no-repeat;
 }
+
+.focus-mode-button {
+  cursor: pointer;
+}
+
+.focus-mode-button svg {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+}
+
+.edit-button {
+  cursor: pointer;
+}
+
+.edit-button svg {
+  height: 20px;
+  width: 20px;
+  margin-right: 15px;
+}
+
+.delete-workout-button {
+  cursor: pointer;
+}
+
+.delete-workout-button svg {
+  height: 20px;
+  width: 20px;
+  margin-right: 15px;
+}
