Create a delete confirmation modal for the user

--- a/src/components/focus-mode/FocusMode.css
+++ b/src/components/focus-mode/FocusMode.css
@@ -32,3 +32,8 @@
 .cancel-focus-modal {
   fill: #8587dc;
 }
+
+.btn-danger-border {
+  border: 1px solid #dc3545;
+  border-radius: 0rem 0rem 0rem 0.3rem !important;
+}
