--- a/src/pages/Workouts.css
+++ b/src/pages/Workouts.css
@@ -35,3 +35,62 @@
   width: 20px;
   margin-right: 15px;
 }
+
+.preview-button {
+  cursor: pointer;
+}
+
+.preview-button svg {
+  height: 20px;
+  width: 20px;
+  margin-right: 15px;
+}
+
+.share-button {
+  cursor: pointer;
+}
+
+.share-button svg {
+  height: 20px;
+  width: 20px;
+  margin-right: 15px;
+}
+
+.preview-share-button svg {
+  width: 25px;
+  height: 25px;
+}
+
+.preview-model svg {
+  height: 300px;
+  width: 300px;
+}
+
+.preview-model svg polygon {
+  cursor: unset !important;
+}
+
+.custom-card-image {
+  width: 18rem;
+}
+
+.custom-card-size {
+  min-height: 350px !important;
+}
+
+.accordion-image img {
+  max-height: 250px;
+}
+
+.accordion-button:focus {
+  z-index: 3;
+  border-color: #8587dc;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(133 135 220 / 50%) !important;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #8587dc;
+  background-color: #e9e9fa;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
