--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -53,3 +53,13 @@
   width: 100%;
   border: 2px solid #acadff;
 }
+
+.logo {
+  height: 50px;
+  width: 50px;
+}
+
+.logo-min {
+  height: 25px;
+  width: 25px;
+}
